Prevent from collapsing on short screens below 140px.

--- a/packages/blocks-next/src/blocks/cart-line-items/style.scss
+++ b/packages/blocks-next/src/blocks/cart-line-items/style.scss
@@ -1,5 +1,5 @@
 .wp-block-surecart-slide-out-cart-line-items {
-	flex: 1 1 200px;
+	flex: 1 0 140px;
 	overflow: auto;
 	display: flex;
 	flex-direction: column;
